[workspace]
members = [
    "crates/chainio/clients/avsregistry/",
    "crates/chainio/clients/elcontracts/",
    "crates/chainio/clients/eth/",
    "crates/chainio/clients/fireblocks/",
    "crates/chainio/txmanager/",
    "crates/contracts/bindings/",
    "crates/crypto/bls/",
    "crates/crypto/bn254/",
    "crates/eigen-cli/",
    "crates/logging/",
    "crates/metrics/",
    "crates/metrics/collectors/economic/",
    "crates/metrics/collectors/rpc_calls/",
    "crates/services/avsregistry/",
    "crates/services/bls_aggregation/",
    "crates/services/operatorsinfo/",
    "crates/signer/",
    "crates/types/",
    "crates/utils/",
    "crates/nodeapi/",
    "crates/eigensdk/",
    "examples/anvil-utils",
    "examples/avsregistry-read",
    "examples/avsregistry-write",
    "examples/info-operator-service/",
    "testing/testing-utils/",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eigen Layer contributors"]
rust-version = "1.79"
repository = "https://github.com/Layr-Labs/eigensdk-rs"
homepage = ""
license-file = "LICENSE"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
clippy.unwrap_used = "warn"
clippy.expect_used = "warn"
clippy.todo = "warn"

[workspace.dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0"
ark-serialize = "0.4.2"
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-sdk-kms = "1.37.0"
clap = { version = "4.5.11", features = ["derive"] }
eigen-chainio-txmanager = { path = "crates/chainio/txmanager/" }
eigen-client-avsregistry = { path = "crates/chainio/clients/avsregistry" }
eigen-client-elcontracts = { path = "crates/chainio/clients/elcontracts" }
eigen-client-eth = { path = "crates/chainio/clients/eth" }
eigen-client-fireblocks = { path = "crates/chainio/clients/fireblocks" }
eigen-contract-bindings = { path = "crates/contracts/bindings/" }
eigen-crypto-bls = { path = "crates/crypto/bls/" }
eigen-crypto-bn254 = { path = "crates/crypto/bn254/" }
eigen-logging = { path = "crates/logging/" }
eigen-metrics = { path = "crates/metrics/" }
eigen-metrics-collectors-economic = { path = "crates/metrics/collectors/economic" }
eigen-metrics-collectors-rpc-calls = { path = "crates/metrics/collectors/rpc_calls" }
eigen-services-avsregistry = { path = "crates/services/avsregistry" }
eigen-services-blsaggregation = { path = "crates/services/bls_aggregation" }
eigen-services-operatorsinfo = { path = "crates/services/operatorsinfo" }
eigen-signer = { path = "crates/signer/" }
eigen-testing-utils = { path = "testing/testing-utils" }
eigen-types = { path = "crates/types/" }
eigen-utils = { path = "crates/utils/" }
eigen-nodeapi = { path = "crates/nodeapi/" }
eth-keystore = "0.5.0"
ethers = "2.0.14"
ethers-signers = "2.0.14"
eyre = "0.6.12"
futures-util = "0.3.30"
hex = "0.4"
hex-literal = "0.4.1"
hyper = "0.14.25"
info-operator-service = { path = "examples/info-operator-service" }
k256 = "0.13.3"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
num-bigint = "0.4.6"
once_cell = "1.17"
prometheus-client = "0.22.2"
quote = "1.0"
rand = "0.8"
rand_core = "0.6"
reqwest = "0.12.4"
rstest = "0.22.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.121"
serial_test = "3.1"
syn = "2.0"
tempfile = "3"
testcontainers = "0.20.1"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["test-util", "full", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5.2"

#misc
rust-bls-bn254 = { version = "0.2.0", features = ["std"] }
uuid = { version = "1.10.0", features = ["v4"] }


#misc
parking_lot = "0.12"

#alloy
alloy-chains = "0.1.36"
alloy-consensus = { version = "0.4.2", default-features = false }
alloy-contract = { version = "0.4.2", default-features = false }
alloy-dyn-abi = "0.8.7"
alloy-eips = { version = "0.4.2", default-features = false }
alloy-genesis = { version = "0.4.2", default-features = false }
alloy-json-rpc = { version = "0.4.2", default-features = false }
alloy-network = { version = "0.4.2", default-features = false }
alloy-node-bindings = { version = "0.4.2", default-features = false }
alloy-primitives = "0.8.7"
alloy-provider = { version = "0.4.2", default-features = false, features = [
    "reqwest",
    "ws",
] }
alloy-pubsub = { version = "0.4.2", default-features = false }
alloy-rlp = "0.3.8"
alloy-rpc-client = "0.4.2"
alloy-rpc-types = { version = "0.4.2", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-eth = "0.4.2"
alloy-serde = { version = "0.4.2", default-features = false }
alloy-signer = { version = "0.4.2", default-features = false }
alloy-signer-aws = "0.4.2"
alloy-signer-local = { version = "0.4.2", default-features = false }
alloy-sol-types = "0.8.7"
alloy-transport = { version = "0.4.2" }
alloy-transport-http = { version = "0.4.2", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.4.2", default-features = false }
alloy-transport-ws = { version = "0.4.2", default-features = false }
alloy-trie = "0.6.0"
alloy = { version = "0.4.2", features = ["sol-types", "contract","full","signer-aws"] }
anvil-utils = { path = "examples/anvil-utils" }
avsregistry-read = { path = "examples/avsregistry-read" }
avsregistry-write = { path = "examples/avsregistry-write" }
