[workspace]
members = [
    "crates/chainio/clients/avsregistry/",
    "crates/chainio/clients/elcontracts/",
    "crates/chainio/clients/eth/",
    "crates/chainio/clients/fireblocks/",
    "crates/chainio/txmanager/",
    "crates/crypto/bls/",
    "crates/crypto/bn254/",
    "crates/eigen-cli/",
    "crates/logging/",
    "crates/metrics/",
    "crates/metrics/collectors/economic/",
    "crates/metrics/collectors/rpc_calls/",
    "crates/services/avsregistry/",
    "crates/services/bls_aggregation/",
    "crates/services/operatorsinfo/",
    "crates/signer/",
    "crates/types/",
    "crates/utils/",
    "crates/nodeapi/",
    "crates/eigensdk/",
    "examples/anvil-utils",
    "examples/avsregistry-read",
    "examples/avsregistry-write",
    "examples/info-operator-service/",
    "testing/testing-utils/",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Eigen Layer contributors"]
rust-version = "1.79"
repository = "https://github.com/Layr-Labs/eigensdk-rs"
homepage = ""
license-file = "LICENSE"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
clippy.unwrap_used = "warn"
clippy.expect_used = "warn"
clippy.panic = "warn"
clippy.todo = "warn"
clippy.indexing_slicing = "warn"
clippy.string_slice = "warn"
clippy.panic_in_result_fn = "warn"
clippy.panicking_overflow_checks = "warn"
clippy.question_mark = "warn"
clippy.implicit_return = "allow"

[workspace.dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.83"
aws-config = "1.5.9"
aws-sdk-kms = "1.49.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
clap = { version = "4.5.20", features = ["derive"] }
eigen-chainio-txmanager = { path = "crates/chainio/txmanager/" }
eigen-client-avsregistry = { path = "crates/chainio/clients/avsregistry" }
eigen-client-elcontracts = { path = "crates/chainio/clients/elcontracts" }
eigen-client-eth = { path = "crates/chainio/clients/eth" }
eigen-client-fireblocks = { path = "crates/chainio/clients/fireblocks" }
eigen-crypto-bls = { path = "crates/crypto/bls/" }
eigen-crypto-bn254 = { path = "crates/crypto/bn254/" }
eigen-logging = { path = "crates/logging/" }
eigen-metrics = { path = "crates/metrics/" }
eigen-metrics-collectors-economic = { path = "crates/metrics/collectors/economic" }
eigen-metrics-collectors-rpc-calls = { path = "crates/metrics/collectors/rpc_calls" }
eigen-services-avsregistry = { path = "crates/services/avsregistry" }
eigen-services-blsaggregation = { path = "crates/services/bls_aggregation" }
eigen-services-operatorsinfo = { path = "crates/services/operatorsinfo" }
eigen-signer = { path = "crates/signer/" }
eigen-testing-utils = { path = "testing/testing-utils" }
eigen-types = { path = "crates/types/" }
eigen-utils = { path = "crates/utils/" }
eigen-nodeapi = { path = "crates/nodeapi/" }
eth-keystore = "0.5"
ethers = "2.0"
ethers-signers = "2.0"
eyre = "0.6"
futures-util = "0.3"
futures = "0.3"
hex = "0.4"
hex-literal = "0.4"
hyper = "0.5"
info-operator-service = { path = "examples/info-operator-service" }
k256 = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
num-bigint = "0.4"
once_cell = "1.20"
prometheus-client = "0.22"
quote = "1.0"
rand = "0.8"
rand_core = "0.6"
reqwest = "0.12"
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.1"
syn = "2.0"
tempfile = "3.13"
testcontainers = "0.23"
thiserror = "1.0"
tokio = { version = "1.41", features = ["test-util", "full", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5"

#misc
rust-bls-bn254 = { version = "0.2.1", features = ["std"] }
uuid = { version = "1.11", features = ["v4"] }


#misc
parking_lot = "0.12"


anvil-utils = { path = "examples/anvil-utils" }

#alloy
alloy = { version = "0.7.0", features = [
    "sol-types",
    "contract",
    "full",
    "signer-aws",
] }
alloy-json-rpc = { version = "0.7", default-features = false }
alloy-network = { version = "0.7", default-features = false }
alloy-node-bindings = { version = "0.7", default-features = false }
alloy-primitives = "0.8.14"
alloy-provider = { version = "0.7", default-features = false, features = [
    "reqwest",
    "ws",
] }
alloy-pubsub = { version = "0.7", default-features = false }
alloy-rlp = "0.3.9"
alloy-rpc-client = "0.7"
alloy-rpc-types = { version = "0.7", default-features = false, features = [
    "eth",
] }
alloy-serde = { version = "0.7", default-features = false }
alloy-signer = { version = "0.7", default-features = false }
alloy-signer-aws = "0.7"
alloy-signer-local = { version = "0.7", default-features = false }
alloy-sol-types = "0.8"
alloy-transport = { version = "0.7" }
alloy-transport-http = { version = "0.7", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.7.0", default-features = false }
alloy-transport-ws = { version = "0.7.0", default-features = false }

avsregistry-read = { path = "examples/avsregistry-read" }
avsregistry-write = { path = "examples/avsregistry-write" }
