[workspace]
members = [
    "crates/common/",
    "crates/chainio/clients/avsregistry/",
    "crates/chainio/clients/elcontracts/",
    "crates/chainio/clients/eth/",
    "crates/chainio/clients/fireblocks/",
    "crates/crypto/bls/",
    "crates/crypto/bn254/",
    "crates/eigen-cli/",
    "crates/logging/",
    "crates/metrics/",
    "crates/metrics/collectors/economic/",
    "crates/metrics/collectors/rpc_calls/",
    "crates/services/avsregistry/",
    "crates/services/bls_aggregation/",
    "crates/services/operatorsinfo/",
    "crates/signer/",
    "crates/types/",
    "crates/utils/",
    "crates/nodeapi/",
    "crates/eigensdk/",
    "examples/anvil-utils",
    "examples/avsregistry-read",
    "examples/avsregistry-write",
    "examples/info-operator-service/",
    "testing/testing-utils/",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Eigen Layer contributors"]
rust-version = "1.79"
repository = "https://github.com/Layr-Labs/eigensdk-rs"
homepage = ""
license-file = "LICENSE"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints]
rustdoc.all = "warn"
clippy.unwrap_used = "warn"
clippy.expect_used = "warn"
clippy.panic = "warn"
clippy.todo = "warn"
clippy.indexing_slicing = "warn"
clippy.string_slice = "warn"
clippy.panic_in_result_fn = "warn"
clippy.panicking_overflow_checks = "warn"
clippy.question_mark = "warn"
clippy.implicit_return = "allow"

[workspace.dependencies]
eigen-client-avsregistry = { version = "0.3.0", path = "crates/chainio/clients/avsregistry" }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.83"
aws-config = "1.5.9"
aws-sdk-kms = "1.49.0"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
clap = { version = "4.5.20", features = ["derive"] }
eigen-common = {  version = "0.3.0", path = "crates/common/" }
eigen-client-elcontracts = { version = "0.3.0", path = "crates/chainio/clients/elcontracts" }
eigen-client-eth = { version = "0.3.0", path = "crates/chainio/clients/eth" }
eigen-client-fireblocks = { version = "0.3.0", path = "crates/chainio/clients/fireblocks" }
eigen-crypto-bls = { version = "0.3.0", path = "crates/crypto/bls/" }
eigen-crypto-bn254 = { version = "0.3.0", path = "crates/crypto/bn254/" }
eigen-logging = { version = "0.3.0", path = "crates/logging/" }
eigen-metrics = { version = "0.3.0", path = "crates/metrics/" }
eigen-metrics-collectors-economic = { version = "0.3.0", path = "crates/metrics/collectors/economic" }
eigen-metrics-collectors-rpc-calls = { version = "0.3.0", path = "crates/metrics/collectors/rpc_calls" }
eigen-services-avsregistry = { version = "0.3.0", path = "crates/services/avsregistry" }
eigen-services-blsaggregation = { version = "0.3.0", path = "crates/services/bls_aggregation" }
eigen-services-operatorsinfo = { version = "0.3.0", path = "crates/services/operatorsinfo" }
eigen-signer = { version = "0.3.0", path = "crates/signer/" }
eigen-testing-utils = { version = "0.3.0", path = "testing/testing-utils" }
eigen-types = { version = "0.3.0", path = "crates/types/" }
eigen-utils = { version = "0.3.0", path = "crates/utils/" }
eigen-nodeapi = { version = "0.3.0", path = "crates/nodeapi/" }
eth-keystore = "0.5"
ethers = "2.0"
ethers-signers = "2.0"
eyre = "0.6"
futures-util = "0.3"
futures = "0.3"
hex = "0.4"
hex-literal = "0.4"
hyper = "0.5"
k256 = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.16.1"
num-bigint = "0.4"
once_cell = "1.20"
prometheus-client = "0.22"
quote = "1.0"
rand = "0.8"
rand_core = "0.6"
reqwest = "0.12"
rstest = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.1"
syn = "2.0"
tempfile = "3.13"
testcontainers = "0.23"
thiserror = "1.0"
tokio = { version = "1.41", features = ["test-util", "full", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2.5"

#misc
rust-bls-bn254 = { version = "0.2.1", features = ["std"] }
uuid = { version = "1.11", features = ["v4"] }


#misc
parking_lot = "0.12"



# alloy
alloy = { version = "0.9", features = [
    "sol-types",
    "contract",
    "full",
    "signer-aws",
    "rlp",
    "json-rpc",
] }

