[package]
name = "compliance-test"
description = "Compliance tests between implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
convert_case = "0.6.0"
dotenvy = "0.15.7"

[lints]
workspace = true

[dev-dependencies]
