[package]
name = "compliance"
description = "Compliance tests"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]

[dev-dependencies]
alloy-primitives.workspace = true
eigen-client-avsregistry.workspace = true
eigen-crypto-bls.workspace = true
eigen-services-operatorsinfo.workspace = true
eigen-services-avsregistry.workspace = true
eigen-types.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
