[package]
name = "eigen-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Common functions for EigenLayer SDK"
license-file.workspace = true

[dependencies]
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-signer-local.workspace = true
alloy-pubsub.workspace = true
alloy-provider.workspace = true
url.workspace = true
