[package]
name = "eigen-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-contract.workspace = true
clap.workspace = true
eigen-testing-utils.workspace = true
eigen-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "egnaddrs"
path = "src/bin/egnaddrs.rs"
