[package]
name = "eigen-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "logging utilities"
license-file.workspace = true

[dependencies]
ctor = "0.2.8"
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
