[package]
name = "eigen-nodeapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
alloy-contract.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-provider = {workspace = true, features = ["ws"]}
alloy-pubsub.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-transport.workspace = true
alloy-transport-http.workspace = true
reqwest.workspace = true
serde_json.workspace =true
actix-web = "4.9.0"
serde.workspace = true
tracing.workspace = true
tokio.workspace = true