[package]
name = "eigen-nodeapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace =true
actix-web = "4.9.0"
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true
