[package]
name = "eigen-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-aws.workspace = true
alloy-signer-local.workspace = true
alloy-rpc-client.workspace = true
aws-sdk-kms.workspace = true
eth-keystore.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
alloy-node-bindings.workspace = true
testcontainers.workspace = true
aws-config.workspace = true
tokio.workspace = true
