[package]
name = "eigen-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "aws,keystore,web3,private_key signers"
license-file.workspace = true

[dependencies]
alloy.workspace =true 
async-trait.workspace = true
aws-sdk-kms.workspace = true
eth-keystore.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
aws-config.workspace = true
eigen-testing-utils.workspace = true
testcontainers.workspace = true
tokio.workspace = true
