[package]
name = "eigensdk-signerv2"
description = "Eigen Layer SDK signer utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ethers-core.workspace = true
ethers.workspace = true
ethers-signers.workspace = true
eth-keystore = "0.5.0"
thiserror.workspace = true