[package]
name = "eigen-types"
description = "Eigen Layer types "

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ethers.workspace = true
num-bigint = "0.4.4"
eigen-crypto-bls.workspace = true
alloy-primitives.workspace = true
ark-serialize = "0.4.2"

[dev-dependencies]
