[package]
name = "eigen-types"
description = "Eigen Layer types "

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy.workspace = true
ark-ff.workspace = true
eigen-crypto-bls.workspace = true
eigen-utils.workspace = true
ethers.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

num-bigint = "0.4.4"
regex = "1"
mime-sniffer = "0.1"

[dev-dependencies]
ark-bn254.workspace = true
