[package]
name = "eigen-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "publicly exportable alloy bindings and utilities"
license-file.workspace = true

[dependencies]
alloy.workspace = true
reqwest.workspace = true
alloy-provider = {workspace = true, features = ["ws"]}
alloy-pubsub.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-network.workspace = true


