[package]
name = "eigen-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "publicly exportable alloy bindings and utilities"
license-file.workspace = true

[dependencies]
alloy.workspace = true
reqwest.workspace = true


