[package]
name = "eigen-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "publicly exportable alloy bindings and utilities"
license-file.workspace = true

[lib]
doctest = false

[dependencies]
alloy.workspace = true
regex = "1"
reqwest.workspace = true
