[package]
name = "examples-avsregistry-read"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true
description = "avsregistry read examples"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
eigen-client-avsregistry.workspace = true
eigen-logging.workspace = true
eigen-testing-utils.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
