[package]
name = "examples-avsregistry-write"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true


[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }


eigen-client-avsregistry.workspace = true
eigen-client-elcontracts.workspace = true
eigen-testing-utils.workspace = true
eigen-crypto-bls.workspace = true
eigen-crypto-bn254.workspace = true
eigen-utils.workspace = true
ark-bn254 = "0.4.0"
ark-ff.workspace = true
eigen-chainio-utils.workspace = true
alloy-signer-wallet.workspace = true
ark-std = { version = "0.4.0", default-features = false }
rand_core = {version = "0.6.4", features = ["getrandom"] }

