[package]
name = "examples-avsregistry-write"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true
description = "avsregistry write examples"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-signer-local.workspace = true
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.2", default-features = false }
ark-ff.workspace = true
ark-serialize = "0.4"
ark-std = { version = "0.4.0", default-features = false }
eigen-client-avsregistry.workspace = true
eigen-client-elcontracts.workspace = true
eigen-crypto-bls.workspace = true
eigen-crypto-bn254.workspace = true
eigen-logging.workspace = true
eigen-testing-utils.workspace = true
eigen-types.workspace = true
eigen-utils.workspace = true
eyre.workspace = true
lazy_static = "1.5.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
