[package]
name = "info-operator-service"
description = "Example demonstrating the operatorsinfo crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
eigen-client-avsregistry.workspace = true
eigen-services-operatorsinfo.workspace = true
alloy-primitives.workspace = true
tokio = {workspace = true, features =["full"]}
tracing.workspace = true
eigen-logging.workspace = true