[package]
name = "info-operator-service"
description = "Example demonstrating the operatorsinfo crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy-primitives.workspace = true
eigen-client-avsregistry.workspace = true
eigen-logging.workspace = true
eigen-services-operatorsinfo.workspace = true
tokio = {workspace = true, features =["full"]}
tracing.workspace = true
