[package]
name = "info-operator-service"
description = "Example demonstrating the operatorsinfo crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-provider.workspace = true
eigen-client-avsregistry.workspace = true
eigen-client-elcontracts.workspace = true
eigen-crypto-bls.workspace = true
eigen-logging.workspace = true
eigen-testing-utils.workspace = true
eigen-services-operatorsinfo.workspace = true
eigen-utils.workspace = true
tokio = {workspace = true, features =["full"]}
tracing.workspace = true
tokio-util = "0.7.11"

