[package]
name = "eigen-testing-utils"
description = "Testing utils for eigen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
eigen-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
testcontainers.workspace = true
alloy.workspace = true